--- a/templates/index.html
+++ b/templates/index.html
@@ -195,23 +195,36 @@
         <div class="blocks6_9">
             <div class="block6">
                 <span class="text6-1"> Chi-Chi or Chichi </span>
-                <img src="../styles/images/Ivan/girl.png" class="photo6-1">
                 <img src="../styles/images/Ivan/line.png" class="line6-1">
-                <span class="text6-2">Recipe by</span>
-                <span class="text6-3">Smuckersreg Toppings</span>
-                <span class="text6-4"><i class="fa fa-regular fa-clock"></i></span>
-                <span class="text6-5">35mins</span>
-                <span class="text6-6"><i class="fa fa-regular fa-comment"></i></span>
-                <span class="text6-7">7</span>
-                <span class="text6-8"><i class="fa fa-regular fa-eye"></i></span>
-                <span class="text6-9">14</span>
-                <div class="line6-2"></div>
-                <img src="../styles/images/Ivan/food.png" class="photo6-2">
-                <div class="dot6-1"></div>
-                <div class="dot6-2"></div>
-                <div class="dot6-3"></div>
-                <div class="dot6-4"></div>
-                <div class="dot6-5"></div>
+                <div class="articul-info">
+                    <img src="../styles/images/Ivan/girl.png" class="photo6-1">
+                    <div class="right-panel6-1">
+                        <span class="text6-2">Recipe by</span>
+                        <span class="text6-3">Smuckersreg Toppings</span>
+                        <div class="stats6-1">
+                            <span class="text6-4"><i class="fa fa-regular fa-clock"></i></span>
+                            <span class="text6-5">15mins</span>
+                            <div class="line6-2"></div>
+                            <span class="text6-6"><i class="fa fa-regular fa-comment"></i></span>
+                            <span class="text6-7">7</span>
+                            <span class="text6-8"><i class="fa fa-regular fa-eye"></i></span>
+                            <span class="text6-9">14</span>
+                        </div>
+
+                    </div>
+
+                </div>
+                <div class="photo-galery">
+                    <div class="dot-nav-6-1">
+                        <div class="dot6"></div>
+                        <div class="dot6"></div>
+                        <div class="dot6 selected-dot"></div>
+                        <div class="dot6"></div>
+                        <div class="dot6"></div>
+                    </div>
+
+                </div>
+
             </div>
 
             <div class="block9">
