--- a/templates/index.html
+++ b/templates/index.html
@@ -206,9 +206,9 @@
                             <span class="text6-5">15mins</span>
                             <div class="line6-2"></div>
                             <span class="text6-6"><i class="fa fa-regular fa-comment"></i></span>
-                            <span class="text6-7">7</span>
+                            <span class="text6-7">12</span>
                             <span class="text6-8"><i class="fa fa-regular fa-eye"></i></span>
-                            <span class="text6-9">14</span>
+                            <span class="text6-9">37</span>
                         </div>
 
                     </div>
@@ -228,28 +228,51 @@
             </div>
 
             <div class="block9">
-                <span class="text9-1">Target</span>
+                <div class="top-part9">
+                    <span class="text9-1">Target</span>
+                    <div class="social-print">
+                        <a href="javascript:(print());"> <span class="icons9-1"> <i class="fa fa-print"></i></span></a>
+                        <a href="https://www.gmail.com/" target="_blank"> <span class="icons9-2"> <i class="fa fa-regular fa-envelope"></i></span></a>
+                        <a href="https://www.facebook.com/" target="_blank"> <span class="icons9-3"> <i class="fab fa-facebook-f"></i></span></a>
+                        <a href="https://www.pinterest.com/" target="_blank"> <span class="icons9-4  "> <i class="fab fa-pinterest"></i></span></a>
+                    </div>
+
+                </div>
                 <img src="../styles/images/Ivan/line.png" class="line9-1">
                 <span class="text9-2">Presentation line</span>
-                <span class="text9-3">Housewives</span>
-                <span class="text9-4">Lorem ipsum dolor sit amet, prima ceteros.</span>
-                <span class="text9-5">Newlyweds</span>
-                <span class="text9-6">Has brute elitr deserunt ea, assentior eloquen-tiam neglegentur te sed.</span>
-                <span class="text9-7">Business lady</span>
-                <span class="text9-8">Ei nam primis putent signiferumque.</span>
-                <img src="../styles/images/Ivan/white1.jpg" class="img9-1">
-                <img src="../styles/images/Ivan/white2.jpg" class="img9-2">
-                <img src="../styles/images/Ivan/white3.jpg" class="img9-3">
-                <img src="../styles/images/Ivan/red1.jpg" class="img9-4">
-                <img src="../styles/images/Ivan/green1.jpg" class="img9-5">
-                <img src="../styles/images/Ivan/green2.jpg" class="img9-6">
-                <span class="text9-9">19%</span>
-                <span class="text9-10">65%</span>
-                <span class="text9-11">50%</span>
-                <a href="javascript:(print());"> <span class="icons9-1"> <i class="fa fa-print"></i></span></a>
-                <a href="https://www.gmail.com/" target="_blank"> <span class="icons9-2"> <i class="fa fa-regular fa-envelope"></i></span></a>
-                <a href="https://www.facebook.com/" target="_blank"> <span class="icons9-3"> <i class="fab fa-facebook-f"></i></span></a>
-                <a href="https://www.pinterest.com/" target="_blank"> <span class="icons9-4  "> <i class="fab fa-pinterest"></i></span></a>
+                <div class="content6">
+                    <div class="procents6-1">
+                        <img src="../styles/images/Ivan/white1.jpg" class="img9-1">
+                        <img src="../styles/images/Ivan/red1.jpg" class="img9-4">
+                        <span class="text9-9">19%</span>
+                    </div>
+                    <div class="text-content6">
+                        <span class="text9-3">Housewives</span>
+                        <span class="text9-4">Lorem ipsum dolor sit amet, prima ceteros.</span>
+                    </div>
+                </div>
+                <div class="content6">
+                    <div class="procents6-2">
+                        <img src="../styles/images/Ivan/white2.jpg" class="img9-2">
+                        <img src="../styles/images/Ivan/green1.jpg" class="img9-5">
+                        <span class="text9-10">65%</span>
+                    </div>
+                    <div class="text-content6">
+                        <span class="text9-5">Newlyweds</span>
+                        <span class="text9-6">Has brute elitr deserunt ea, assentior eloquen-tiam neglegentur te sed.</span>
+                    </div>
+                </div>
+                <div class="content6">
+                    <div class="procents6-3">
+                        <img src="../styles/images/Ivan/white3.jpg" class="img9-3">
+                        <img src="../styles/images/Ivan/green2.jpg" class="img9-6">
+                        <span class="text9-11">50%</span>
+                    </div>
+                    <div class="text-content6">
+                        <span class="text9-7">Business lady</span>
+                        <span class="text9-8">Ei nam primis putent signiferumque.</span>
+                    </div>
+                </div>
             </div>
         </div>
 
