--- a/styles/styles.css
+++ b/styles/styles.css
@@ -875,6 +875,14 @@ body {
     height: 427px;
     background-color: #ffffff;
     box-shadow: 0px 0px 13px 0px rgba(0,0,0,0.15);
+    display: flex;
+    flex-direction:column;
+}
+.top-part7{
+    display: flex;
+    flex-direction: row;
+    margin: 30px 25px 5px 15px;
+    justify-content: space-between;
 
 }
 .text7-1{
@@ -891,39 +899,45 @@ body {
     height: 2px;
     opacity: 0.2;
     background-color: #555555;
+    margin-left: 15px;
+}
+.diff7{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    margin-top: 15px;
+    margin-left: 50px;
+    margin-right: 70px;
 }
 .text7-2{
     font-family: 'Josefin Sans';
     font-size: 12px;
     line-height: 1.2;
+    font-weight: 300;
+    text-transform: uppercase;
+    letter-spacing: 0.025em;
+    color: #000000;
+}
+.selected-text7-2{
     font-weight: 700;
-    text-transform: uppercase;
-    letter-spacing: 0.025em;
-    color: #000000;
 }
-.text7-3{
-    opacity: 0.8;
-    font-family: 'Josefin Sans';
-    font-size: 12px;
-    line-height: 1.2;
-    font-weight: 300;
-    text-transform: uppercase;
-    letter-spacing: 0.025em;
-    color: #000000;
-}
-.text7-4{
-    opacity: 0.8;
-    font-family: 'Josefin Sans';
-    font-size: 12px;
-    line-height: 1.2;
-    font-weight: 300;
-    text-transform: uppercase;
-    letter-spacing: 0.025em;
-    color: #000000;
-}
-.text7-2:hover, .text7-3:hover, .text7-4:hover{
+.text7-2:hover{
     text-decoration: underline;
     color: #000000;
+}
+.content7{
+    display: flex;
+    flex-direction: column;
+    margin-top: 30px;
+    margin-left: 20px;
+    margin-right: 15px;
+    gap:40px;
+}
+.content7-1{
+    display: flex;
+    flex-direction: row;
+    align-items: flex-start;
+    gap: 15px;
 }
 .photo7-1{
     width: 49px;
@@ -940,21 +954,12 @@ body {
     height: 45px;
     background-color: #8e2e2e;
 }
-.viewbutton{
-    font-family: 'Josefin Sans';
-    font-size:12px;
-    line-height: 1.2;
-    width: 105px;
-    height: 28px;
-    border: 1px solid #c2c2c2;
-    font-weight: 300;
-    color: #010101;
-    background-color: #ffffff;
+.text-content7{
+    display: flex;
+    flex-direction: column;
 }
-.viewbutton:hover{
-    background-color: #c2c2c2;
-    color:#000000;
-    cursor: pointer;
+.author7{
+    display: flex;
 }
 .text7-5{
     font-family: 'Josefin Sans';
@@ -1028,38 +1033,25 @@ body {
     letter-spacing: 0.025em;
     color: #000000;
 }
-.icons7-1{
-    font-family: 'Font Awesome';
-    font-size: 16px;
+.viewbutton{
+    font-family: 'Josefin Sans';
+    font-size:12px;
     line-height: 1.2;
-    font-weight: 400;
-    letter-spacing: 0.025em;
-    color: #555555;
+    width: 105px;
+    height: 28px;
+    border: 1px solid #c2c2c2;
+    font-weight: 300;
+    color: #010101;
+    background-color: #ffffff;
+    align-self: flex-end;
+    margin: 30px 20px 0;
 }
-.icons7-2{
-    font-family: 'Font Awesome';
-    font-size: 16px;
-    line-height: 1.2;
-    font-weight: 400;
-    letter-spacing: 0.025em;
-    color: #555555;
+.viewbutton:hover{
+    background-color: #c2c2c2;
+    color:#000000;
+    cursor: pointer;
 }
-.icons7-3{
-    font-family: 'Font Awesome';
-    font-size: 16px;
-    line-height: 1.2;
-    font-weight: 400;
-    letter-spacing: 0.025em;
-    color: #555555;
-}
-.icons7-4{
-    font-family: 'Font Awesome';
-    font-size: 16px;
-    line-height: 1.2;
-    font-weight: 400;
-    letter-spacing: 0.025em;
-    color: #555555;
-}
+
 /*----------------------------------------------------------*/
 .block8{
     width: 290px;
@@ -1205,30 +1197,6 @@ body {
     letter-spacing: 0.025em;
     color: #555555;
 }
-.icons9-2{
-    font-family: 'Font Awesome';
-    font-size: 16px;
-    line-height: 1.2;
-    font-weight: 400;
-    letter-spacing: 0.025em;
-    color: #555555;
-}
-.icons9-3{
-    font-family: 'Font Awesome';
-    font-size: 16px;
-    line-height: 1.2;
-    font-weight: 400;
-    letter-spacing: 0.025em;
-    color: #555555;
-}
-.icons9-4{
-    font-family: 'Font Awesome';
-    font-size: 16px;
-    line-height: 1.2;
-    font-weight: 400;
-    letter-spacing: 0.025em;
-    color: #555555;
-}
 .line9-1{
     width: 251px;
     height: 2px;
@@ -1243,18 +1211,97 @@ body {
     font-weight: 900;
     letter-spacing: 0.025em;
     color: #055555;
-    margin: 20px 30px;
+    margin: 20px 30px 0px;
 
 }
-.content6{
+.content9{
+    display: flex;
+    flex-direction: column;
+    margin-top: 40px;
+    margin-left: 25px;
+    margin-right: 30px;
+    gap:40px;
+
+
+}
+.text-content9{
+    display: flex;
+    flex-direction: column;
+}
+.content9-1{
     display: flex;
     flex-direction: row;
     gap: 25px;
 }
-.procents6-1{
-
-    background-image:   url(../styles/images/Ivan/white1.jpg),
-                        url(../styles/images/Ivan/red1.jpg);
+.procents9-1{
+    width: 58px;
+    height: 59px;
+    display: flex;
+    background-image:   url(../styles/images/Ivan/white1.jpg);
+}
+.img9-4{
+    width: 30px;
+    height: 55px;
+    margin-left: 28px;
+    margin-top: 4px;
+    background-color: #b50051;
+}
+.text9-9{
+    font-family: 'Josefin Sans';
+    font-size: 21px;
+    line-height: 1.2;
+    font-weight: 300;
+    letter-spacing: 0.025em;
+    position: absolute;
+    align-self: center;
+    margin-left: 13px;
+    color: #959595;
+}
+.procents9-2{
+    width: 58px;
+    height: 59px;
+    display: flex;
+    background-image:   url(../styles/images/Ivan/white2.jpg);
+}
+.img9-5{
+    width: 53px;
+    height: 59px;
+    margin-left: 5px;
+    background-color: #055454;
+}
+.text9-10{
+    font-family: 'Josefin Sans';
+    font-size: 21px;
+    line-height: 1.2;
+    font-weight: 300;
+    letter-spacing: 0.025em;
+    position: absolute;
+    align-self: center;
+    margin-left: 13px;
+    color: #959595;
+}
+.procents9-3{
+    width: 58px;
+    height: 59px;
+    display: flex;
+    background-image:   url(../styles/images/Ivan/white3.jpg);
+}
+.img9-6{
+    width: 58px;
+    height: 29px;
+    background-color: #87d0c5;
+    margin-top: 30px;
+}
+.text9-11{
+    font-family: 'Josefin Sans';
+    font-size: 21px;
+    line-height: 1.2;
+    font-weight: 300;
+    letter-spacing: 0.025em;
+    position: absolute;
+    align-self: center;
+    margin-left: 13px;
+    color: #959595;
 }
 .text9-3{
     font-family: 'Josefin Sans';
@@ -1325,45 +1372,12 @@ body {
     height: 59px;
     background-color: #b7b7b7;
 }
-.img9-4{
-    width: 30px;
-    height: 55px;
-    background-color: #b50051;
-}
-.img9-5{
-    width: 53px;
-    height: 59px;
-    background-color: #055454;
-}
-.img9-6{
-    width: 58px;
-    height: 29px;
-    background-color: #87d0c5;
-}
-.text9-9{
-    font-family: 'Josefin Sans';
-    font-size: 21px;
-    line-height: 1.2;
-    font-weight: 300;
-    letter-spacing: 0.025em;
-    color: #959595;
-}
-.text9-10{
-    font-family: 'Josefin Sans';
-    font-size: 21.4px;
-    line-height: 1.2;
-    font-weight: 300;
-    letter-spacing: 0.025em;
-    color: #959595;
-}
-.text9-11{
-    font-family: 'Josefin Sans';
-    font-size: 21.4px;
-    line-height: 1.2;
-    font-weight: 300;
-    letter-spacing: 0.025em;
-    color: #959595;
-}
+
+
+
+
+
+
 
 
 /*--------------------------------------------------*/
