--- a/templates/index.html
+++ b/templates/index.html
@@ -232,78 +232,104 @@
                     <span class="text9-1">Target</span>
                     <div class="social-print">
                         <a href="javascript:(print());"> <span class="icons9-1"> <i class="fa fa-print"></i></span></a>
-                        <a href="https://www.gmail.com/" target="_blank"> <span class="icons9-2"> <i class="fa fa-regular fa-envelope"></i></span></a>
-                        <a href="https://www.facebook.com/" target="_blank"> <span class="icons9-3"> <i class="fab fa-facebook-f"></i></span></a>
-                        <a href="https://www.pinterest.com/" target="_blank"> <span class="icons9-4  "> <i class="fab fa-pinterest"></i></span></a>
+                        <a href="https://www.gmail.com/" target="_blank"> <span class="icons9-1"> <i class="fa fa-regular fa-envelope"></i></span></a>
+                        <a href="https://www.facebook.com/" target="_blank"> <span class="icons9-1"> <i class="fab fa-facebook-f"></i></span></a>
+                        <a href="https://www.pinterest.com/" target="_blank"> <span class="icons9-1"> <i class="fab fa-pinterest"></i></span></a>
                     </div>
 
                 </div>
                 <img src="../styles/images/Ivan/line.png" class="line9-1">
                 <span class="text9-2">Presentation line</span>
-                <div class="content6">
-                    <div class="procents6-1">
-                        <img src="../styles/images/Ivan/white1.jpg" class="img9-1">
-                        <img src="../styles/images/Ivan/red1.jpg" class="img9-4">
-                        <span class="text9-9">19%</span>
+                <div class="content9">
+                    <div class="content9-1">
+                        <div class="procents9-1">
+                            <span class="text9-9">19%</span>
+                            <img src="../styles/images/Ivan/red1.jpg" class="img9-4">
+                        </div>
+                        <div class="text-content9">
+                            <span class="text9-3">Housewives</span>
+                            <span class="text9-4">Lorem ipsum dolor sit amet, prima ceteros.</span>
+                        </div>
                     </div>
-                    <div class="text-content6">
-                        <span class="text9-3">Housewives</span>
-                        <span class="text9-4">Lorem ipsum dolor sit amet, prima ceteros.</span>
+                    <div class="content9-1">
+                        <div class="procents9-2">
+                            <span class="text9-10">65%</span>
+                            <img src="../styles/images/Ivan/green1.jpg" class="img9-5">
+
+                        </div>
+                        <div class="text-content9">
+                            <span class="text9-5">Newlyweds</span>
+                            <span class="text9-6">Has brute elitr deserunt ea, assentior eloquen-tiam neglegentur te sed.</span>
+                        </div>
+                    </div>
+                    <div class="content9-1">
+                        <div class="procents9-3">
+                            <img src="../styles/images/Ivan/green2.jpg" class="img9-6">
+                            <span class="text9-11">50%</span>
+                        </div>
+                        <div class="text-content9">
+                            <span class="text9-7">Business lady</span>
+                            <span class="text9-8">Ei nam primis putent signiferumque.</span>
+                        </div>
                     </div>
                 </div>
-                <div class="content6">
-                    <div class="procents6-2">
-                        <img src="../styles/images/Ivan/white2.jpg" class="img9-2">
-                        <img src="../styles/images/Ivan/green1.jpg" class="img9-5">
-                        <span class="text9-10">65%</span>
-                    </div>
-                    <div class="text-content6">
-                        <span class="text9-5">Newlyweds</span>
-                        <span class="text9-6">Has brute elitr deserunt ea, assentior eloquen-tiam neglegentur te sed.</span>
-                    </div>
-                </div>
-                <div class="content6">
-                    <div class="procents6-3">
-                        <img src="../styles/images/Ivan/white3.jpg" class="img9-3">
-                        <img src="../styles/images/Ivan/green2.jpg" class="img9-6">
-                        <span class="text9-11">50%</span>
-                    </div>
-                    <div class="text-content6">
-                        <span class="text9-7">Business lady</span>
-                        <span class="text9-8">Ei nam primis putent signiferumque.</span>
-                    </div>
-                </div>
+
             </div>
         </div>
 
         <div class="blocks7_11_12">
             <div class="block7">
-                <span class="text7-1">Recipe</span>
+                <div class="top-part7">
+                    <span class="text7-1">Recipe</span>
+                    <div class="social-print">
+                        <a href="javascript:(print());"> <span class="icons9-1"> <i class="fa fa-print"></i></span></a>
+                        <a href="https://www.gmail.com/" target="_blank"> <span class="icons9-1"> <i class="fa fa-regular fa-envelope"></i></span></a>
+                        <a href="https://www.facebook.com/" target="_blank"> <span class="icons9-1"> <i class="fab fa-facebook-f"></i></span></a>
+                        <a href="https://www.pinterest.com/" target="_blank"> <span class="icons9-1"> <i class="fab fa-pinterest"></i></span></a>
+                    </div>
+                </div>
                 <img src="../styles/images/Ivan/line.png" class="line7-1">
-                <a href="#text7-2" class="text7-2">easy</a>
-                <a href="#text7-3" class="text7-3">middle</a>
-                <a href="#text7-4" class="text7-4">long</a>
-                <img src="../styles/images/Ivan/salat.png" class="photo7-1" >
-                <img src="../styles/images/Ivan/cocos.png" class="photo7-2" >
-                <img src="../styles/images/Ivan/hands.png" class="photo7-3" >
+                <div class="diff7">
+                    <a href="#text7-2" class="text7-2 selected-text7-2">easy</a>
+                    <a href="#text7-2" class="text7-2">middle</a>
+                    <a href="#text7-2" class="text7-2">long</a>
+                </div>
+                <div class="content7">
+                    <div class="content7-1">
+                        <img src="../styles/images/Ivan/salat.png" class="photo7-1" >
+                        <div class="text-content7">
+                            <div class="author7">
+                                <span class="text7-5">by</span>
+                                <span class="text7-6">Smuckersreg Toppings</span>
+                            </div>
+                            <span class="text7-7">Thanks for the recipe lorem ipsum bla bla bla Thanks for the recipe lore</span>
+                        </div>
+
+                    </div>
+                    <div class="content7-1">
+                        <img src="../styles/images/Ivan/cocos.png" class="photo7-2" >
+                        <div class="text-content7">
+                            <div class="author7">
+                                <span class="text7-8">by</span>
+                                <span class="text7-9">Smuckersreg Toppings</span>
+                            </div>
+                            <span class="text7-10">Thanks for the recipe lorem nks for the recipe</span>
+                        </div>
+
+                    </div>
+                    <div class="content7-1">
+                        <img src="../styles/images/Ivan/hands.png" class="photo7-3" >
+                        <div class="text-content7">
+                            <div class="author7">
+                                <span class="text7-11">by</span>
+                                <span class="text7-12">Smuckersreg Toppings</span>
+                            </div>
+                            <span class="text7-13">Thanks for the recipe lorem nks for the recipe</span>
+                        </div>
+
+                    </div>
+                </div>
                 <button class="viewbutton" >VIEW MORE</button>
-
-                <span class="text7-5">by</span>
-                <span class="text7-6">Smuckersreg Toppings</span>
-                <span class="text7-7">Thanks for the recipe lorem ipsum bla bla bla Thanks for the recipe lore</span>
-
-                <span class="text7-8">by</span>
-                <span class="text7-9">Smuckersreg Toppings</span>
-                <span class="text7-10">Thanks for the recipe lorem nks for the recipe</span>
-
-                <span class="text7-11">by</span>
-                <span class="text7-12">Smuckersreg Toppings</span>
-                <span class="text7-13">Thanks for the recipe lorem nks for the recipe</span>
-
-                <a href="javascript:(print());"> <span class="icons7-1"> <i class="fa fa-print"></i></span></a>
-                <a href="https://www.gmail.com/" target="_blank"> <span class="icons7-2"> <i class="fa fa-regular fa-envelope"></i></span></a>
-                <a href="https://www.facebook.com/" target="_blank"> <span class="icons7-3"> <i class="fab fa-facebook-f"></i></span></a>
-                <a href="https://www.pinterest.com/" target="_blank"> <span class="icons7-4  "> <i class="fab fa-pinterest"></i></span></a>
             </div>
 
             <div class="block11">
