--- a/templates/index.html
+++ b/templates/index.html
@@ -201,14 +201,14 @@
                     <div class="right-panel6-1">
                         <span class="text6-2">Recipe by</span>
                         <span class="text6-3">Smuckersreg Toppings</span>
-                        <div class="stats6-1">
-                            <span class="text6-4"><i class="fa fa-regular fa-clock"></i></span>
-                            <span class="text6-5">15mins</span>
-                            <div class="line6-2"></div>
-                            <span class="text6-6"><i class="fa fa-regular fa-comment"></i></span>
-                            <span class="text6-7">12</span>
-                            <span class="text6-8"><i class="fa fa-regular fa-eye"></i></span>
-                            <span class="text6-9">37</span>
+                        <div class="stats-elem">
+                            <span class="icon-elem"><i class="fa fa-regular fa-clock"></i></span>
+                            <span class="icon-text">15mins</span>
+                            <div class="stats-line"></div>
+                            <span class="icon-elem"><i class="fa fa-regular fa-comment"></i></span>
+                            <span class="icon-text">12</span>
+                            <span class="icon-elem"><i class="fa fa-regular fa-eye"></i></span>
+                            <span class="icon-text">37</span>
                         </div>
 
                     </div>
@@ -394,16 +394,22 @@
         <div class="blocks8_10">
             <div class="block8">
                 <span class="text8-1">Popular Now</span>
+                <img src="../styles/images/Ivan/white_line.png" class="line8-1">
                 <span class="text8-2">Vanilla Frozen Coffee</span>
-                <span class="text8-3">Mix coffee, sugar and creamer.<br>Pour into blender and add ice cubes.<br>Blend until smooth.</span>
-                <span class="text8-4"><i class="fa fa-regular fa-clock"></i></span>
-                <span class="text8-5">6mins</span>
-                <span class="text8-6"><i class="fa fa-regular fa-comment"></i></span>
-                <span class="text8-7">240</span>
-                <span class="text8-8"><i class="fa fa-regular fa-eye"></i></span>
-                <span class="text8-9">400</span>
-                <div class="line8-1"></div>
-                <button class="viewbutton8-1">GET IT RECIPE</button>
+                <span class="text8-3">Mix coffee, sugar and creamer.<br> Pour into blender and add ice cubes.<br> Blend until smooth.</span>
+                <div class="bot-part8">
+                    <button class="viewbutton8-1">GET IT RECIPE</button>
+                    <div class="stats-elem">
+                        <span class="icon-elem"><i class="fa fa-regular fa-clock"></i></span>
+                        <span class="icon-text">6mins</span>
+                        <div class="stats-line"></div>
+                        <span class="icon-elem"><i class="fa fa-regular fa-comment"></i></span>
+                        <span class="icon-text">240</span>
+                        <span class="icon-elem"><i class="fa fa-regular fa-eye"></i></span>
+                        <span class="icon-text">400</span>
+                    </div>
+                </div>
+
             </div>
 
             <div class="block10">
@@ -424,7 +430,7 @@
                 <span class="text10-7">15mins</span>
                 <span class="text10-8">25mins</span>
                 <span class="text10-9">40mins</span>
-                <img src="../styles/images/Ivan/line_4834.png" class="line10-5">
+                <img src="../styles/images/Ivan/line.png" class="line10-5">
             </div>
         </div>
     </div>
