--- a/templates/index.html
+++ b/templates/index.html
@@ -244,7 +244,7 @@
                     <div class="content9-1">
                         <div class="procents9-1">
                             <span class="text9-9">19%</span>
-                            <img src="../styles/images/Ivan/red1.jpg" class="img9-4">
+                            <img src="../styles/images/Ivan/red1.png" class="img9-4">
                         </div>
                         <div class="text-content9">
                             <span class="text9-3">Housewives</span>
@@ -254,7 +254,7 @@
                     <div class="content9-1">
                         <div class="procents9-2">
                             <span class="text9-10">65%</span>
-                            <img src="../styles/images/Ivan/green1.jpg" class="img9-5">
+                            <img src="../styles/images/Ivan/green1.png" class="img9-5">
 
                         </div>
                         <div class="text-content9">
@@ -264,7 +264,7 @@
                     </div>
                     <div class="content9-1">
                         <div class="procents9-3">
-                            <img src="../styles/images/Ivan/green2.jpg" class="img9-6">
+                            <img src="../styles/images/Ivan/green2.png" class="img9-6">
                             <span class="text9-11">50%</span>
                         </div>
                         <div class="text-content9">
@@ -413,24 +413,43 @@
             </div>
 
             <div class="block10">
-                <span class="text10-1">Timeline</span>
-                <a href="javascript:(print());"> <span class="icons10-1"> <i class="fa fa-print"></i></span></a>
-                <a href="https://www.gmail.com/" target="_blank"> <span class="icons10-2"> <i class="fa fa-regular fa-envelope"></i></span></a>
-                <a href="https://www.facebook.com/" target="_blank"> <span class="icons10-3"> <i class="fab fa-facebook-f"></i></span></a>
-                <a href="https://www.pinterest.com/" target="_blank"> <span class="icons10-4  "> <i class="fab fa-pinterest"></i></span></a>
+                <div class="top-part10">
+                    <span class="text10-1">Timeline</span>
+                    <div class="social-print">
+                        <a href="javascript:(print());"> <span class="icons9-1"> <i class="fa fa-print"></i></span></a>
+                        <a href="https://www.gmail.com/" target="_blank"> <span class="icons9-1"> <i class="fa fa-regular fa-envelope"></i></span></a>
+                        <a href="https://www.facebook.com/" target="_blank"> <span class="icons9-1"> <i class="fab fa-facebook-f"></i></span></a>
+                        <a href="https://www.pinterest.com/" target="_blank"> <span class="icons9-1"> <i class="fab fa-pinterest"></i></span></a>
+                    </div>
+
+                </div>
                 <img src="../styles/images/Ivan/line.png" class="line10-1">
                 <span class="text10-2">Time line</span>
-                <span class="text10-3">Eam adhuc iudico percipitur ex, ut malis audire voluptaria has.</span>
-                <img src="../styles/images/Ivan/gren1.jpg" class="line10-2">
-                <img src="../styles/images/Ivan/gren2.jpg" class="line10-3">
-                <img src="../styles/images/Ivan/redline1.jpg" class="line10-4">
-                <span class="text10-4">EASY</span>
-                <span class="text10-5">MIDDLE</span>
-                <span class="text10-6">LONG</span>
-                <span class="text10-7">15mins</span>
-                <span class="text10-8">25mins</span>
-                <span class="text10-9">40mins</span>
+                <div class="content10">
+                    <div class="content10-1">
+                        <span class="text10-4">EASY</span>
+                        <div class="item10">
+                            <span class="text10-7">15mins</span>
+                            <img src="../styles/images/Ivan/gren1.jpg" class="line10-2">
+                        </div>
+                    </div>
+                    <div class="content10-1">
+                        <span class="text10-5">MIDDLE</span>
+                        <div class="item10">
+                            <span class="text10-8">25mins</span>
+                            <img src="../styles/images/Ivan/gren2.jpg" class="line10-3">
+                        </div>
+                    </div>
+                    <div class="content10-1">
+                        <span class="text10-6">LONG</span>
+                        <div class="item10">
+                            <span class="text10-9">40mins</span>
+                            <img src="../styles/images/Ivan/redline1.jpg" class="line10-4">
+                        </div>
+                    </div>
+                </div>
                 <img src="../styles/images/Ivan/line.png" class="line10-5">
+                <span class="text10-3">Eam adhuc iudico percipitur ex, ut malis audire voluptaria has.</span>
             </div>
         </div>
     </div>
